--- a/html/pages/signup/templates/layout.html
+++ b/html/pages/signup/templates/layout.html
@@ -20,6 +20,7 @@
 
 	<div id="main-contentreg"></div>
 	<div class="modal-body">
+		<div class="inner-content-h"></div>
 		<div id="errormsg"></div>
 		<div id="preview"></div>
 	</div>
