--- a/html/pages/profile/templates/header.html
+++ b/html/pages/profile/templates/header.html
@@ -9,12 +9,14 @@
 	
 	<div class="row-fluid profile-pic-outer">
 		<div class="span7 border-right">
-		    <div class="span6 textcenter">
+			<ul class="span6 textcenter image-outer-h">
+			</ul>
+		    <!--div class="span6 textcenter">
 		        {{#user_picture_obj}}
 		        <img src="{{base_url}}{{image_path}}" alt="{{name}}" />
 			    <div id="votes-area-h"></div>
 		        {{/user_picture_obj}}
-		    </div>
+		    </div-->
 		    
 		    <div class="span6">
 			    	<!--<div class="school-name">ORG NAME</div>
