--- a/html/css/app.css
+++ b/html/css/app.css
@@ -274,6 +274,7 @@ div.image-item-container > img{
     position: absolute;
     min-width: 220px;
     min-height: 220px;
+    left: 0;
 }
 
 .action-section{
