--- a/html_build/pages/game/templates/header.html
+++ b/html_build/pages/game/templates/header.html
@@ -22,7 +22,10 @@
 		<a href="javascript: void(0);" class="common-btn game-edit-btn-h common-default-sky-dark pull-right">Edit Game</a>
 	</div>
 
-	{{#game_picture}}
+	<ul class="span6 textcenter image-outer-h">
+			</ul>
+
+	<!--{{#game_picture}}
 	<a href="javascript: void(0);" class="header-image-container image-outer-h">
 	<div class="image-item-container">
 		<img src="{{game_picture.types.standard_thumb.url}}" alt="{{game_name}}" />
@@ -44,9 +47,8 @@
 			</div>
 			{{/game_picture.is_owner}}
 		</div>
-
 	</div> </a>
-	{{/game_picture}}
+	{{/game_picture}}-->
 
 	<ul class="teams-list">
 		{{#teams}}
