--- a/html_build/usercontrols/photo-player/photoPlayer.css
+++ b/html_build/usercontrols/photo-player/photoPlayer.css
@@ -206,6 +206,7 @@ div.right-arrow-container > img{
 .photo-player-arrow {
 	position: absolute;
 	top: 40%;
+    z-index: 10000;
 }
 #video_container{
     width: 100%;
