nother quick build

--- a/html/pages/game/templates/header.html
+++ b/html/pages/game/templates/header.html
@@ -22,7 +22,7 @@
 		<a href="javascript: void(0);" class="common-btn game-edit-btn-h common-default-sky-dark pull-right">Edit Game</a>
 	</div>
 
-	<ul class="span6 textcenter image-outer-h">
+	<ul class="span3 image-outer-h">
 			</ul>
 
 	<!--{{#game_picture}}
