some fixes to photo players, general styling stuff, video upload and a new build.

--- a/html/pages/videopreview/templates/upload.html
+++ b/html/pages/videopreview/templates/upload.html
@@ -23,60 +23,72 @@
 		<input type="text" id="title" name="title" style="width:95%" placeholder="Enter a Title"/>
 		<label style="margin-bottom: 2px;">Sport</label>
 		<select name="sports_id" id="sports_id" style="width:95%;" class="">
-			<option value="1">Baseball</option>
-			<option value="2">Basketball</option>
-			<option value="3">Cross Country</option>
-			<option value="6">Football</option>
-			<option value="7">Rugby</option>
-			<option value="8">Golf</option>
-			<option value="9">Hockey</option>
-			<option value="10">Lacrosse</option>
-			<option value="11">Soccer</option>
-			<option value="12">Swimming</option>
-			<option value="14">Tennis</option>
-			<option value="15">Track and Field</option>
-			<option value="16">Volleyball</option>
-			<option value="17">Water Polo</option>
-			<option value="18">Wrestling</option>
-			<option value="19">Crew</option>
-			<option value="20">Basketball</option>
-			<option value="21">Cross Country</option>
-			<option value="22">Cheerleading</option>
-			<option value="23">Golf</option>
-			<option value="24">Hockey</option>
-			<option value="25">Lacrosse</option>
-			<option value="26">Softball</option>
-			<option value="27">Soccer</option>
-			<option value="28">Swimming</option>
-			<option value="30">Tennis</option>
-			<option value="31">Track and Field</option>
-			<option value="32">Volleyball</option>
-			<option value="33">Water Polo</option>
-			<option value="34">Field Hockey</option>
-			<option value="35">Crew</option>
-			<option value="36">Gymnastics</option>
-			<option value="37">Rifle</option>
-			<option value="38">Skiing</option>
-			<option value="39">Diving</option>
-			<option value="40">Indoor Track</option>
-			<option value="41">Fencing</option>
-			<option value="42">Fencing</option>
-			<option value="43">Gymnastics</option>
-			<option value="44">Rifle</option>
-			<option value="45">Skiing</option>
-			<option value="46">Indoor Track</option>
-			<option value="47">Diving</option>
-			<option value="48">Squash</option>
-			<option value="49">Squash</option>
-			<option value="50">Long Distance Running</option>
-			<option value="51">Triathalon</option>
-			<option value="52">Beach Volleyball</option>
-			<option value="53">Men's Boxing</option>
-			<option value="54">Women's Boxing</option>
-			<option value="55">Men's Brazilian Jujitsu</option>
-			<option value="56">Women's Brazilian Jujitsu</option>
-			<option value="57">Men's MMA</option>
-			<option value="58">Women's MMA</option>
+			<option value="1">Baseball (Men's)</option>
+			<option value="2">Basketball (Men's)</option>
+			<option value="20">Basketball (Women's)</option>
+			<option value="52">Beach Volleyball (Individual)</option>
+			<option value="53">Boxing (Men's)</option>
+			<option value="54">Boxing (Women's)</option>
+			<option value="55">Brazilian Jujitsu (Men's)</option>
+			<option value="56">Brazilian Jujitsu (Women's)</option>
+			<option value="22">Cheerleading (Women's)</option>
+			<option value="19">Crew (Men's)</option>
+			<option value="35">Crew (Women's)</option>
+			<option value="3">Cross Country (Men's)</option>
+			<option value="21">Cross Country (Women's)</option>
+			<option value="74">Crossfit (Individual)</option>
+			<option value="72">Cycling (Individual)</option>
+			<option value="39">Diving (Men's)</option>
+			<option value="47">Diving (Women's)</option>
+			<option value="41">Fencing (Men's)</option>
+			<option value="42">Fencing (Women's)</option>
+			<option value="34">Field Hockey (Women's)</option>
+			<option value="6">Football (Men's)</option>
+			<option value="82">Golf (Individual)</option>
+			<option value="8">Golf (Team) (Men's)</option>
+			<option value="23">Golf (Team) (Women's)</option>
+			<option value="36">Gymnastics (Men's)</option>
+			<option value="43">Gymnastics (Women's)</option>
+			<option value="9">Hockey (Men's)</option>
+			<option value="24">Hockey (Women's)</option>
+			<option value="40">Indoor Track (Men's)</option>
+			<option value="46">Indoor Track (Women's)</option>
+			<option value="62">Karate (Men's)</option>
+			<option value="63">Karate (Women's)</option>
+			<option value="64">Kickboxing (Men's)</option>
+			<option value="65">Kickboxing (Women's)</option>
+			<option value="10">Lacrosse (Men's)</option>
+			<option value="25">Lacrosse (Women's)</option>
+			<option value="50">Long Distance Running (Individual)</option>
+			<option value="57">MMA (Men's)</option>
+			<option value="58">MMA (Women's)</option>
+			<option value="78">Mountain Climbing (Individual)</option>
+			<option value="37">Rifle (Men's)</option>
+			<option value="44">Rifle (Women's)</option>
+			<option value="7">Rugby (Men's)</option>
+			<option value="38">Skiing (Men's)</option>
+			<option value="45">Skiing (Women's)</option>
+			<option value="11">Soccer (Men's)</option>
+			<option value="27">Soccer (Women's)</option>
+			<option value="26">Softball (Women's)</option>
+			<option value="70">Spartan Race (Individual)</option>
+			<option value="48">Squash (Men's)</option>
+			<option value="49">Squash (Women's)</option>
+			<option value="76">Surfing (Individual)</option>
+			<option value="68">Swimming (Individual)</option>
+			<option value="12">Swimming (Team) (Men's)</option>
+			<option value="28">Swimming (Team) (Women's)</option>
+			<option value="66">Tennis (Individual)</option>
+			<option value="14">Tennis (Team) (Men's)</option>
+			<option value="30">Tennis (Team) (Women's)</option>
+			<option value="15">Track and Field (Men's)</option>
+			<option value="31">Track and Field (Women's)</option>
+			<option value="51">Triathalon (Individual)</option>
+			<option value="16">Volleyball (Men's)</option>
+			<option value="32">Volleyball (Women's)</option>
+			<option value="17">Water Polo (Men's)</option>
+			<option value="33">Water Polo (Women's)</option>
+			<option value="18">Wrestling (Men's)</option>
 		</select>
 
 		<div id="uploadfiles" class="common-default-sky-dark btn-common" style="width:70px;">Upload</div>
