--- a/html/usercontrols/tag/templates/layout.html
+++ b/html/usercontrols/tag/templates/layout.html
@@ -1,5 +1,5 @@
 <div class="well-large container_batch_tag">
-	<h4>Batch Tag</h4>
+	<h4>Tagging</h4>
 	<div class="section-Add-Sports_h well-large">
 	<div class="m_bottom_10">
 		Select Sport:
