--- a/html/pages/imageup/imageup.css
+++ b/html/pages/imageup/imageup.css
@@ -148,6 +148,7 @@ color: red;
 }
 .previewimg .lnkFooter{
 	background: none repeat scroll 0 0 #1B9FAE;
+    font-weight: lighter;
     float: left;
     font-size: 14px;
     text-align: left;
@@ -160,20 +161,24 @@ color: red;
 
 .previewimg .lnkFooter button{
 	background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
+    font-weight: lighter;
     border-radius: 0 0 0 0;
-    border-right: 2px solid #FFFFFF;
+    border-right: none;
+    border-style: none;
     color: #FFFFFF;
     float: left;
-    font-size: 14px;
+    font-size:.9em;
     text-shadow: none;
     width: 100px;
 }
 .previewimg .lnkFooter button.close{
-	border: medium none;
-    font-size: 30px;
+	border: none;
+    font-weight: lighter;
+    font-size: .9em;
     opacity: 1;
-    width: 56px;
-     padding: 6px 0;
+    width: 100px;
+    padding: 6px 0;
+    float: right;
 }
 .previewimg img {
 	border: none;
