--- a/html_build/pages/home/templates/menu.html
+++ b/html_build/pages/home/templates/menu.html
@@ -18,7 +18,7 @@
 				<li><a id="user" class="restype" data-number="2" href="javascript:void(0)">Athletes</a></li>
 				<li><a id="image" class="restype" data-number="1" href="javascript:void(0)">Images</a></li>
 				<li><a id="video" class="restype"  data-number="0" href="javascript:void(0)">Videos</a></li>
-				<li><a id="game" class="restype" data-number="3" href="javascript:void(0)">Games</a></li>
+				<li><a id="game" class="restype" data-number="3" href="javascript:void(0)">Games &amp; Events</a></li>
 			</ul>
 		</div>
 	</div>
@@ -108,20 +108,7 @@
 		</a>
 	</div>
 
-
-
-
-
 	<div class="pull-right search-box">
 		<input type="text" id="search" placeholder="SEARCH"/><a>Search</a>
 	</div>
-
-
-
 </div>
-<!--<div class="pull-left type-icons">
-	<a id="video" class="searchBtn" data-number="0" href="javascript:void(0)"><i class="icon-facetime-video"></i>Videos</a>
-	<a id="image" class="searchBtn" data-number="1" href="javascript:void(0)"><i class="icon-picture"></i>Images</a>
-	<a id="user" class="searchBtn" data-number="2" href="javascript:void(0)"><i class="icon-user"></i>Athletes</a>
-	<a id="game" class="searchBtn" data-number="3" href="javascript:void(0)"><i class="icon-user"></i>Games</a>
-</div>-->
