--- a/html_build/pages/imageup/templates/preview_template.html
+++ b/html_build/pages/imageup/templates/preview_template.html
@@ -10,9 +10,8 @@
 		
 		<div class="clear"></div>
 		<div id="{{preview_id}}rot" class="previewrotate lnkFooter">
-			<button id="{{preview_id}}pre img" value="{{preview_id}}" class="btn rotate">Rotate</button>
-			<button type="button" class="btn" value ="{{preview_id}}"data-dismiss="{{preview_id}}">Sport</button>
-			<button type="button" class="btn close closepreview" value ="{{preview_id}}"data-dismiss="{{preview_id}}">&times;</button>
+			<button id="{{preview_id}}pre img" value="{{preview_id}}" class="btn rotate">rotate 90&deg;</button>
+			<button type="button" class="btn close closepreview" value ="{{preview_id}}"data-dismiss="{{preview_id}}">delete</button>
 		</div>
 		<div class="clear"></div>
 		<div id="{{preview_id}}" class="previewprogress"></div>
