mostly styling changes for stats box and reg popup.

--- a/html/css/app.css
+++ b/html/css/app.css
@@ -182,6 +182,32 @@ footer span{
     left:50%;
     margin-left: -250px;
 }
+
+#RegModal .modal-body{
+    overflow: hidden;
+
+}
+#RegModal #mainreg #header.regheader{
+    font-size: 2.3em;
+    font-weight: bolder;
+}
+#RegModal div#regpanemain{
+    width: auto;
+}
+#RegModal div#regpanemain .signupsubmit{
+    margin-left:75px;
+}
+#RegModal div#regpanemain .signupsubmit input.regsubmit{
+    margin-left:16px;
+}
+#RegModal div#regpanemain #firstregbase input{
+    border:1px solid #CCC;
+}
+#RegModal #reglogin span{
+    float: right;
+    padding-right:15px;
+    z-index: 1052;
+}
 .floatLeft {
 	float: left;
 }
@@ -792,19 +818,32 @@ a.comment-delete{
 	float: left;
 	width: 100%;
 	text-align: left;
+
+}
+li.fitnessbasic{
+  /*  padding-bottom: 10px;*/
 }
 
 .fitness-overview-data-piece{
-    width:30%;
+    width:45%;
     display:inline-block;
-    float:left;
-    height:30px;
-    margin:15px 20px 30px 30px;
+    margin-top:15px;
+    margin-bottom: 15px;
 }
-
+.fitness-overview-data-piece:nth-child(odd){
+    float:left;
+    margin-left:25px;
+}
+.fitness-overview-data-piece:nth-child(even){
+    float: right;
+    margin-right: 0;
+}
+.fitness-overview-data-piece span{
+    font-weight: bolder; font-size: 1.6em;
+}
 .fitness-overview-data-piece img{
-    width:40px;
-    height: 40px;
+    width:55px;
+    height: 55px;
 }
 
 .stats-panel{
@@ -970,6 +1009,7 @@ a.add-game-h{
 
 #sports-info ul#sport-list{
     margin:0 0 0 0;
+    width: 100%;
 }
 
 #sports-info ul#sport-list .sport:hover{
