--- a/html/usercontrols/tag/templates/layout.html
+++ b/html/usercontrols/tag/templates/layout.html
@@ -26,6 +26,11 @@
 		<strong>Teams :</strong> <br/>
 		<label class="lbl-tag-team-name_h"></label><span><button class="btn btn-tag-edit-team_h displayNone">Edit</button></span>
 	</div>
+
+	<div class="section-events_h displayNone section_inner">
+		<strong>Event:</strong> <br/>
+		<label class="lbl-tag-event-name_h"></label><span><button class="btn btn-tag-edit-event_h displayNone">Edit</button></span>
+	</div>
 	
 	</div>
 	<div class="clear"></div>
@@ -44,6 +49,19 @@
 		<div class="clear"></div>
 		<button class="btn btn-primary btn-tag-team-Done_h displayNone">Done</button>
 		
+	</div>
+	<div class="clear"></div>
+	<div class="section-tag-event_h displayNone section_outer">
+		Tag an Event:
+		<br/>
+		<input type="text" class="txt-tag-event-state_h" placeholder="Enter State" />
+		<div class="clear"></div>
+		<input type="text"class="txt-tag-event_h" disabled="disabled" placeholder="Enter The Event's Title" />
+		<div class="clear"></div>
+		<span class="displayNone field-message"></span>
+		<div class="clear"></div>
+		<button class="btn btn-primary btn-tag-event-Done_h displayNone">Done</button>
+
 	</div>
 	<div class="clear"></div>
 	<div class="section-tag-player_h displayNone section_outer">
@@ -86,9 +104,10 @@
 	<div class="clear"></div>
 	<div class="section-link_h displayNone section_outer">
 		Tag:
-		&nbsp;<a href="javascript:void(0)" class="link-tag-team_h">Team</a>
-		&nbsp;<a href="javascript:void(0)" class="link-tag-player_h displayNone">Player</a>
-		&nbsp;<a href="javascript:void(0)" class="link-tag-Game_h displayNone">Game</a>
+		<a href="javascript:void(0)" class="link-tag-team_h">Team&nbsp;</a>
+		<a href="javascript:void(0)" class="link-tag-player_h displayNone">Player&nbsp;</a>
+		<a href="javascript:void(0)" class="link-tag-Game_h displayNone">Game&nbsp;</a>
+		<a href="javascript:void(0)" class="link-tag-event_h displayNone">Event&nbsp;</a>
 		<div class="clear"></div>
 		<span class="displayNone field-message"></span>
 	</div>
