--- a/html/css/app.css
+++ b/html/css/app.css
@@ -1507,3 +1507,11 @@ margin-top:10px;
     padding:4px;
     text-align: center;
 }
+
+.region-loader {
+	background: url(../images/loader/loading.gif) no-repeat;
+	width: 100%;
+	min-height: 50px;
+	margin: 0 auto;
+	background-position: 50% 0;
+}
