--- a/html/pages/login/templates/logintemplate.html
+++ b/html/pages/login/templates/logintemplate.html
@@ -1,29 +1,106 @@
-<div id="logincontainer">
-<form action="/user/login" method="post" accept-charset="utf-8">
-<label for="username">Email</label><input type="text" name="username" placeholder="Email Address" />
-<label for="password">Password</label><input type="password" name="password" placeholder="Password" />
-<label for="remember">Remember Me</label><input type="checkbox" name="remember" />
-<p>(Remember Me keeps you logged in for 2 weeks)</p>
-<div class="errormsg"></div>
-<input type="submit" name="login" class="loginUser" value="Login" /></form>
-<a href="javascript: void(0);" class="forgot-password-h" title="Forgot My Password">Forgot My Password</a>
-<p>Or <a id= "signup" href="#">create a new account</a></p>
-</div>
+<!--<h1>Auth module using the ORM driver for Kohana 3.1</h1>-->
+<style>
+#firstregbase input {
+border: 1px solid #CCC;
+}
+.loguser{
 
+}
+.loguser input{
+	float: left;
+    margin-left: 1px !important;
+    width: 46px !important;
+
+}
+.loguser label{
+	padding: 9px;
+
+}
+.loguser p {
+	margin-left: 15px;
+}
+
+#regpanemain {
+   	position: relative!important;
+    width: 547px;
+}
+.subtweak{
+
+}
+.btn-common{
+	color:blue;
+}
+.addsub{
+	padding-top: 9px;
+}
+.loginUser ,.addsub{
+	margin-left: 15px;
+}
+.btn-custom{}
+</style>
+<div id="regcontainer">
+	<div id="loginmain">
+		<div id="mainreg">
+			<div id="fbpane">
+				<div id="label">
+					Login with facebook
+				</div>
+				<div id="fblogo"><span></span></div>
+			</div>
+			<div class ="regor">
+				or
+			</div>
+			<div id="regpanemain">	
+				<form action="/user/login" method="post" accept-charset="utf-8">
+					<div id="firstregbase">
+						<!--<div class="loginbase">
+							<!--<label for="username">Email</label>-->
+							<input type="text" name="username" placeholder="Email Address" />
+							<!--<label for="password">Password</label>-->
+							<input type="password" name="password" placeholder="Password" />
+							<div class="loguser">
+								<input type="checkbox" name="remember" />
+								<label for="remember">Remember Me</label>
+								
+								<p>(Remember Me keeps you logged in for 2 weeks)</p>
+							</div>	
+						<!--</div>-->	
+						<div class="errormsg"></div>
+						
+						<button type="button" class=" loginUser btn btn-primary">Login</button>
+						<div class="addsub">
+							<button type="button"  class="forgot-password-h btn btn-info btn-sm btn-custom" >Forgot My Password</button>
+							
+							<button type="button"  id= "signup" class=" btn btn-info btn-sm btn-custom" >create a new account</button>
+							
+						</div>				
+					</div>
+					
+					
+				</form>
+				
+			</div>
+			
+	
+		</div>
+
+	</div>
+	
+</div>
 
 <div class="forgot-password-container hide">
 	<div class="success-message hide">Password Reset link has been sent to your email address. Please check.</div>
 	<div class="error-message hide">Sorry we couldn't find the match record. Please try again with valid Email.</div>	
 	<form action="" method="POST" class="forgot-password-form-h">
-		<label for="">Email</label>
-		<input type="email" name="forgot_password_email" class="forgot-password-email-h" />
-		
-		<br/>
-		<input type="submit" name="forgot-password-btn" class="forgot-pasword-btn-h" value="Request Password" />
-		<br/><br/>
-		<p><a class="log-in-link-h" href="javascript: void(0);">Log In</a></p>
+		<!--<label for="">Email</label>-->
+		<div id="firstregbase">
+			<input type="email" name="forgot_password_email" class="forgot-password-email-h" placeholder="Email Address" />
+			<button type="submit" name="forgot-password-btn" class="forgot-pasword-btn-h btn btn-default addsub" > Request Password </button>
+			<button type="button" class="log-in-link-h btn btn-default btn-sm addsub" >&nbsp;Log In &nbsp;</button>
+		</div>
+		<!--<br/>
+		<input type="submit" name="forgot-password-btn" class="forgot-pasword-btn-h btn btn-default" value="Request Password" />
+		<br/><br/>!-->
+		<!--<p><a class="log-in-link-h" href="javascript: void(0);"> Log In</a></p>-->
 	</form>
-</div>
-
-
 </div>
