--- a/html/pages/signup/css/signupstyle.css
+++ b/html/pages/signup/css/signupstyle.css
@@ -279,3 +279,39 @@
 	width: 30px !important;
 	margin-left: 107px !important;
 }
+#firstregbase input {
+border: 1px solid #CCC;
+}
+.loguser{
+
+}
+.loguser input{
+	float: left;
+    margin-left: 1px !important;
+    width: 46px !important;
+
+}
+.loguser label{
+	padding: 9px;
+
+}
+.loguser p {
+	margin-left: 15px;
+}
+
+#regpanemain {
+   	position: relative!important;
+    width: 547px;
+}
+.subtweak{
+
+}
+.btn-common{
+	color:blue;
+}
+.addsub{
+	padding-top: 9px;
+}
+.loginUser ,.addsub{
+	margin-left: 15px;
+}
