--- a/html_build/css/app.css
+++ b/html_build/css/app.css
@@ -365,8 +365,9 @@ div.game-tile{
 }
 .detail-view span{
     display: inline-block;
-    padding: 2px 8px 8px 8px;
+    padding: 2px 8px 2px 8px;
     font-size: .8em;
+    line-height: 15px;
 }
 input {
 	background: #CCCCCC;
