--- a/html_build/usercontrols/photo-player/templates/tags.html
+++ b/html_build/usercontrols/photo-player/templates/tags.html
@@ -1,6 +1,6 @@
+<div class="prof-name-area"></div>
 <div class="tags-outer-h">
 	<ul id="tags-list"></ul>
 </div>
 <div class="clear">
-	<a href="javascript: void(0);" title="see more" class="see-more-h">See More</a>
 </div>
