--- a/html/pages/home/templates/menu.html
+++ b/html/pages/home/templates/menu.html
@@ -59,7 +59,7 @@
 			</div>
 		</a>
 
-		<div class="dd menu-detail-h reset-location-area-h">
+		<div class="dd menu-detail-h reset-location-area-h no-padding">
 			<!--<a href="javascript: void(0);" class="btn location-reset-btn-h">Reset</a>-->
 			<!--div class="state"></div-->
 			<div class="city"></div>
@@ -87,9 +87,10 @@
 					{{/views.browse}}
 				</ul>
 			</div>
+
 			<br/>
 
-			<div class="clearfix">
+			<div class="dropdown">
 				<span>TIME FRAME</span>
 
 				<div class="clearfix"></div>
