--- a/html/css/common.css
+++ b/html/css/common.css
@@ -38,6 +38,12 @@ body { font-size:100%; font-family: "Raleway","Helvetica"; }
 .common-default-green-inter { background:#9CCA3C; }
 .common-default-green-light { background: #c4df89; }
 
+.common-btn-small{
+    font-size: 1em;
+    height: auto;
+    padding:5px 10px;
+}
+
 input  { background: #f3f5f7; color:#000; }
 input::-webkit-input-placeholder, textarea::-webkit-input-placeholder { color: #9a9fa5; }
 input:-moz-placeholder, textarea:-moz-placeholder { color: #9a9fa5; }
