--- a/html/pages/home/templates/menu.html
+++ b/html/pages/home/templates/menu.html
@@ -102,14 +102,11 @@
 			</div>
 		</div>
 	</div>
-	<div id="views" class="menu span2" >
-		<a href="javascript:void(0)" class="menu-link-h btn-link"><span class="option-heading-h reset-all-btn-h">RESET</span>
-
-			
-		</a>
+	<div id="reset" class="menu span2" >
+		<a href="javascript:void(0)" class="menu-link-h btn-link"><span class="option-heading-h reset-all-btn-h" style="text-decoration: underline;">RESET</span></a>
 	</div>
 
 	<div class="pull-right search-box">
-		<input type="text" id="search" placeholder="SEARCH"/><a>Search</a>
+		<input type="text" id="search" placeholder="SEARCH" style="height: 28px; margin:0px 5px;;"/><a href="javascript:void(0);" class="common-btn common-default-sky-dark common-btn-small">SEARCH</a>
 	</div>
 </div>
