--- a/html_build/pages/home/templates/menu.html
+++ b/html_build/pages/home/templates/menu.html
@@ -59,7 +59,7 @@
 			</div>
 		</a>
 
-		<div class="dd menu-detail-h reset-location-area-h">
+		<div class="dd menu-detail-h reset-location-area-h no-padding">
 			<!--<a href="javascript: void(0);" class="btn location-reset-btn-h">Reset</a>-->
 			<!--div class="state"></div-->
 			<div class="city"></div>
@@ -87,9 +87,10 @@
 					{{/views.browse}}
 				</ul>
 			</div>
+
 			<br/>
 
-			<div class="clearfix">
+			<div class="dropdown">
 				<span>TIME FRAME</span>
 
 				<div class="clearfix"></div>
@@ -101,14 +102,11 @@
 			</div>
 		</div>
 	</div>
-	<div id="views" class="menu span2" >
-		<a href="javascript:void(0)" class="menu-link-h btn-link"><span class="option-heading-h reset-all-btn-h">RESET</span>
-
-			
-		</a>
+	<div id="reset" class="menu span2" >
+		<a href="javascript:void(0)" class="menu-link-h btn-link"><span class="option-heading-h reset-all-btn-h" style="text-decoration: underline;">RESET</span></a>
 	</div>
 
 	<div class="pull-right search-box">
-		<input type="text" id="search" placeholder="SEARCH"/><a>Search</a>
+		<input type="text" id="search" placeholder="SEARCH" style="height: 28px; margin:0px 5px;;"/><a href="javascript:void(0);" class="common-btn common-default-sky-dark common-btn-small">SEARCH</a>
 	</div>
 </div>
