--- a/html/usercontrols/photo-player/photoPlayer.css
+++ b/html/usercontrols/photo-player/photoPlayer.css
@@ -88,7 +88,7 @@
 .image-bg {
     text-align: center;
     background: #333;
-    height:100%;
+    height:480px;
     position: relative;
 }
 
@@ -523,4 +523,8 @@ margin-top: 0px;
         opacity: 1;
         padding-right: 9px;
     }
+    
+.image-bg { 
+	height: 482px;
+}
  
