--- a/html/usercontrols/photo-player/photoPlayer.css
+++ b/html/usercontrols/photo-player/photoPlayer.css
@@ -88,7 +88,7 @@
 .image-bg {
     text-align: center;
     background: #333;
-    height:480px;
+    height:100%;
     position: relative;
 }
 
@@ -523,8 +523,4 @@ margin-top: 0px;
         opacity: 1;
         padding-right: 9px;
     }
-    
-.image-bg { 
-	height: 482px;
-}
  
