--- a/html/pages/game/templates/participats-list.html
+++ b/html/pages/game/templates/participats-list.html
@@ -1,9 +1,9 @@
 <div class="clear">
-	<a href="javascript: void(0);" class="add-to-event" title="Add me to this Event">Add me to this Event</a>
+
 </div>
 <ul class="image-list">
 </ul>
-
+	<a href="javascript: void(0);" class="add-to-event pull-right" title="Add me to this Event">Add me to this Event</a>
 <!--a href="javascript: void(0);" class="add-comment">Add Comment</a>
 <a href="javascript: void(0);" class="add-media">Add Media</a-->
 
