--- a/html/pages/profilesetting/profilesettings.css
+++ b/html/pages/profilesetting/profilesettings.css
@@ -160,9 +160,18 @@ div#edit_profile_info_section div span{
 }
 
 #section-basics-prof-setting .profile-image a{
+    display: block;
     font-size: 1.3em;
     font-weight: bold;
     text-align: center;
+    border:4px dashed white;
+    position: relative;
+    top:-80px;
+    height: 40px;
+    background-color: #d36011;
+    color: white;
+    padding-top:15px;
+    opacity:.7;
 }
 
 .main-container{
@@ -208,7 +217,7 @@ div#edit_profile_info_section div span{
 
 .resume_button#edit_profile_info, .resume_button#save_user_data{
     float: left;
-    width: 40px;
+    width: auto;
     cursor: pointer;
     text-align: center;
 }
