--- a/html/pages/profilesetting/templates/basic_info_header.html
+++ b/html/pages/profilesetting/templates/basic_info_header.html
@@ -1,5 +1,5 @@
 {{#payload}}
-<div class="span3 profile-image">
+<div class="span4 profile-image">
 	<img id="img-profile-prof-setting" src="{{user_picture_obj.types.large_thumb.url}}" />
 	<a href="javascript:void(0);" id="change_user_pic">Change User Picture</a>
 </div>
@@ -11,6 +11,6 @@
 	<p id="user_weight">
 		{{#weight_lb}}{{weight_lb}} LBS{{/weight_lb}}
 	</p>
-	<div class="resume_button" id="edit_profile_info">Edit</div>
+	<div class="resume_button" id="edit_profile_info">Edit Basic User Info</div>
 </div>
 {{/payload}}
