--- a/html_build/css/app.css
+++ b/html_build/css/app.css
@@ -110,10 +110,13 @@ header .signup-facebook, header .signup-email {
 }
 footer{
     background-color: black;
-    height: 50px;
+    height: 20px;
+    position: fixed;
+    bottom: 0;
     width: 100%;
-    padding:0 !important;
+    padding:5px !important;
     color: white;
+    text-align: center;
 }
 footer span{
     position: relative;
@@ -616,7 +619,7 @@ a.comment-delete{
 		background: #FFF;
 }
 #main {
-    padding-bottom: 0;
+    padding-bottom: 60px;
 }
 .profile-pic-outer {
 	margin: 40px 15px;
@@ -1098,11 +1101,11 @@ margin-top:10px;
 }
 .left-arrow-page {
 	left: 0;
-	margin-top: 30%;
+	margin-top: -30%;
 }
 .right-arrow-page {
 	right: 0;
-	margin-top: 30%;
+	margin-top: -30%;
 }
 .m_top_50{margin-top:50px;
 	}
@@ -1226,4 +1229,24 @@ margin-top:10px;
 	display: inline-block;
     padding:4px;
     text-align: center;
+}
+.region-loader {
+	background: url(../images/loader/gray_loading.gif) repeat;
+	width: 100%;
+	height: 100%;
+	min-height: 100px;
+	margin: 0 auto;
+}
+.button.close {
+	color: #000;
+}
+#search-result {
+	display: inline-block;
+}
+.image-list {
+	float: left;
+	width: 100%;
+}
+.add-to-event {
+	margin-right: 25px;
 }
