--- a/html_build/usercontrols/photo-player/photoPlayer.css
+++ b/html_build/usercontrols/photo-player/photoPlayer.css
@@ -70,7 +70,7 @@
 .image-bg {
     text-align: center;
     background: #333;
-    height:100%;
+    height:480px;
     position: relative;
 }
 div.image-controls{
@@ -435,4 +435,8 @@ margin-top: 0px;
         opacity: 1;
         padding-right: 9px;
     }
+    
+.image-bg { 
+	height: 482px;
+}
  
