Build done because it seems like some stuff was not carried over on the last build.

--- a/html_build/usercontrols/photo-player/photoPlayer.css
+++ b/html_build/usercontrols/photo-player/photoPlayer.css
@@ -70,7 +70,7 @@
 .image-bg {
     text-align: center;
     background: #333;
-    height:480px;
+    height:100%;
     position: relative;
 }
 div.image-controls{
@@ -435,8 +435,4 @@ margin-top: 0px;
         opacity: 1;
         padding-right: 9px;
     }
-    
-.image-bg { 
-	height: 482px;
-}
  
