--- a/html/usercontrols/addevent/templates/layout.html
+++ b/html/usercontrols/addevent/templates/layout.html
@@ -8,12 +8,6 @@
 		<div class="clear"></div>
 		<input type="text"class="txt-individual-location_h displayNone" placeholder="Enter Location Id"  />
 			<div class="clear"></div>
-		<button class="btn btn-primary btn-game-individual-Finish_h floatRight displayNone">
-			Go There !
-		</button>
-		<button class="btn btn-primary btn-game-individual-Create_h floatRight displayNone">
-			Create !
-		</button>
 	</div>
 	<div class="section-Add-Sports_h">
 		<div class="section-game-date_h floatLeft">
@@ -120,6 +114,8 @@
 	<span class="displayNone field-message field-message_h"></span>
 
 	<div class="clear"></div>
+	<br/>
+	
 	<div>
 	<button class="btn btn-primary btn-game-Finish_h floatRight displayNone">
 		Create ! 
@@ -127,3 +123,11 @@
 	</div>
 	<div class="clear"></div>
 </div>
+<div class="m_top_20 floatRight popup-action-button">
+	<button class="btn btn-primary btn-game-individual-Finish_h displayNone">
+			Go There !
+		</button>
+		<button class="btn btn-primary btn-game-individual-Create_h displayNone">
+			Create !
+		</button>
+	</div>
