fix for team lables on game tiles.

--- a/html/packages/media/templates/image-item.html
+++ b/html/packages/media/templates/image-item.html
@@ -21,7 +21,7 @@
 		<div class="detail-view {{#_detailclass}}{{_detailclass}}{{/_detailclass}}">
 			{{#_label}}<h6>{{_label}}</h6>{{/_label}}
 			{{#_sublabel}}
-				<span>{{label}}</span>
+				<span>{{_sublabel}}</span>
 			{{/_sublabel}}
 		</div>
 	</div>
