--- a/html/pages/home/templates/menu.html
+++ b/html/pages/home/templates/menu.html
@@ -19,6 +19,7 @@
 				<li><a id="image" class="restype" data-number="1" href="javascript:void(0)">Images</a></li>
 				<li><a id="video" class="restype"  data-number="0" href="javascript:void(0)">Videos</a></li>
 				<li><a id="game" class="restype" data-number="3" href="javascript:void(0)">Games &amp; Events</a></li>
+				<li><a id="org" class="restype" data-number="4" href="javascript:void(0)">Teams</a></li>
 			</ul>
 		</div>
 	</div>
@@ -52,7 +53,7 @@
 		</div>
 	</div>
 	<div id="location" class="menu span3">
-		<a href="javascript:void(0)" class="menu-link-h location-link-h"> <span class="option-heading-h">ANYWHERE</span>
+		<a href="javascript:void(0)" class="menu-link-h location-link-h"> <span class="option-heading-h">PLACE</span>
 
 			<div class="caret-large-container">
 				<span class="caret-large"></span>
