--- a/html/css/app.css
+++ b/html/css/app.css
@@ -415,8 +415,17 @@ div.image-item-container > img{
     content : '';
 }
 
-div.game-tile{
+div.back-cover{
+    width: 100%;
     height: 100%;
+    background-color: rgb(121, 121, 121);
+}
+
+div.back-cover img.sports-icon{
+    opacity: .1;
+}
+div.game-tile{
+/*    height: 100%;
     text-align: center;
     vertical-align: middle;
     padding-top: 80px;
@@ -424,6 +433,28 @@ div.game-tile{
     font-weight: bolder;
     color: white;
     background-color:#d36011;
+*/
+/*    height: 150px;*/
+    text-align: center;
+    vertical-align: top;
+    font-size: 1em;
+    line-height: 29px;
+    font-weight: bold;
+    color: #5E5E5E;
+    top: 80px;
+    position: absolute;
+    left: 0px;
+    /* Safari */
+    -webkit-transform: rotate(-45deg);
+
+    /* Firefox */
+    -moz-transform: rotate(-45deg);
+
+    /* IE */
+    -ms-transform: rotate(-45deg);
+
+    /* Opera */
+    -o-transform: rotate(-45deg);
 }
 
 .detail-view h6{
