--- a/html/packages/media/templates/image-item.html
+++ b/html/packages/media/templates/image-item.html
@@ -2,7 +2,10 @@
 	<div class="image-item-container">
 		{{#_thumbnail}}<img class="list-thumbnail" src="{{_thumbnail}}" alt=""/>{{/_thumbnail}}
 		{{^_thumbnail}}
+
 			<div class="game-tile">{{_noicon_text}}</div>
+			<div class="back-cover">{{#_sports_icon}}<img src="{{_sports_icon}}" class="sports-icon" />{{/_sports_icon}}</div>
+
 		{{/_thumbnail}}
 		<div class="action-section">
 			{{#show_edit}}
