--- a/html/css/app.css
+++ b/html/css/app.css
@@ -490,7 +490,7 @@ form fieldset .common-container {
 	top: 30px;
 	padding: 0;
 	margin: 0;
-	background: #FFF;
+	background: #CCCCCC;
 }
 
 .increase-dropown-zindex {
