--- a/html/pages/signup/templates/registration.html
+++ b/html/pages/signup/templates/registration.html
@@ -10,7 +10,7 @@
 
 		<div id="fbpane">
 			<div id="label">
-				Register with facebook
+				Register / Login with facebook
 			</div>
 			<div id="fblogo"><span></span></div>
 		</div>
