--- a/html/packages/media/templates/image-item.html
+++ b/html/packages/media/templates/image-item.html
@@ -1,4 +1,4 @@
-<a href="{{_link}}" data-index="{{index}}" class="image-outer-h {{^_has_link}}open-photo-player-h{{/_has_link}}">
+<a href="{{_link}}" data-index="{{index}}" data-id="{{_media_id}}" class="image-outer-h {{^_has_link}}open-photo-player-h{{/_has_link}}">
 	<div class="image-item-container">
 		{{#_thumbnail}}<img class="list-thumbnail" src="{{_thumbnail}}" alt=""/>{{/_thumbnail}}
 		{{^_thumbnail}}
